Fixed width of overflow container and content-container in IndividualProject.scss

--- a/src/components/IndividualProject/IndividualProject.scss
+++ b/src/components/IndividualProject/IndividualProject.scss
@@ -6,6 +6,7 @@
 	position: relative;
 	overflow: hidden;
 	border-radius: 0.5rem;
+	width: 100%;
 	height: 100%;
 }
 
@@ -100,6 +101,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		width: 100%;
 	}
 
 	&__link {
